# cn-credit-card-bill-parser

./: .gitignore  README.md  clean_data.ps1  pyproject.toml  requirements.txt  run_parser.ps1
src/ccparser/: __init__.py  cli.py  config.py  db.py  dedupe.py  exporters.py  extractors.py  hash_utils.py  logging_utils.py  models.py  normalizers.py  pipeline.py  profiler.py
src/ccparser/parsers/: __init__.py  abc.py  boc.py  bocom.py  ccb.py  citic.py  generic.py  icbc.py  legacy_xlsx.py  registry.py
tests/: test_abc_parser.py  test_boc_parser.py  test_bocom_parser.py  test_ccb_parser.py  test_citic_parser.py  test_dedupe.py  test_generic_parser_safety.py  test_icbc_parser.py  test_legacy_xlsx_parser.py  test_logging.py  test_normalizers.py  test_parser.py  test_safety.py
