[project]
name = "cn-credit-card-bill-parser"
version = "0.1.0"
description = "Local parser for Chinese credit card bills"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.2",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "pdfplumber>=0.11.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
ocr = ["pytesseract>=0.3.10", "pdf2image>=1.17.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
